--- a/compose/push_maven.gradle
+++ b/compose/push_maven.gradle
@@ -1,11 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply plugin: 'maven-publish'
 def isRelease = true
-def mavenUrl = "http://1.1.1.1:8989/repository/globalegrow/"
-def mavenUrlSnapshot = "http://1.1.1.1:8989/repository/globalegrow-snapshot/"
+def mavenUrl = "https://jitpack.io"
+def mavenUrlSnapshot = "https://jitpack.io/"
 def mavenUserName = "l1111"
 def mavenPwd = "l123456"
-def localFile="${rootDir}/plugin_libs"
+def localFile = "${rootDir}/plugin_libs"
 def sdkVersionName = isRelease ? version : version + "-SNAPSHOT"
 publishing {
     publications {
@@ -42,6 +42,7 @@ publishing {
         }
     }
 }
+
 task deleteBuild(type: Delete) {
     println "deleteBuild()"
     def buildDir = project.buildDir.absolutePath
